--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,10 +23,9 @@
 }
 
 body {
-  font: 16px/1.7 "Konnect", "Futura", sans-serif;
+  font: 16px/1.7 "Graphit", sans-serif;
   color: var(--text-color);
   background: var(--bg-default);
-  overflow: hidden;
 
   &.a-mobile {
     overflow: unset;
@@ -47,15 +46,6 @@ body {
   cursor: progress;
 }
 
-#viewport {
-  overflow: hidden;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
 :not(body) {
   background-repeat: no-repeat;
   background-position: 50%;
@@ -66,6 +56,16 @@ a {
   outline: none;
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
 }
 
 article,
@@ -95,10 +95,13 @@ section {
   margin-bottom: 1.042vw;
 }
 
-.link-r {
+.button-r {
+  cursor: pointer;
+  position: relative;
   font-size: 0.833vw;
   font-weight: 400;
   line-height: 1.319vw;
+  padding-left: 8.65vw;
 }
 
 .s-footer .s-project .project-head .footer-container:after,
@@ -118,4 +121,33 @@ img {
 .a-mobile .s-project .image-src {
   top: -25%;
   height: 105%;
+}
+
+@media only screen and (max-width: 768px) {
+  .heading-xl,
+  .s-footer .footer-container:after {
+    font-size: 15vw;
+    line-height: 14.583vw;
+    letter-spacing: -0.3vw;
+  }
+  .paragraph-m {
+    font-size: 6vw;
+    line-height: 8vw;
+    margin-bottom: 8.33vw;
+  }
+  .paragraph-r {
+    font-size: 3vw;
+    line-height: 5vw;
+    margin-bottom: 8.33vw;
+  }
+  .s-footer .s-project .project-head .footer-container:after,
+  .s-project .project-head .heading-xl,
+  .s-project .project-head .s-footer .footer-container:after {
+    order: 3;
+  }
+  .button-r {
+    font-size: 3.5vw;
+    line-height: 5vw;
+    padding-left: 18.33vw;
+  }
 }
