Add smooth scrolling, animations

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,18 +1,3 @@
-:root {
-  --text-color: #171717;
-  --font-family: Konnect, Futura, sans-serif;
-
-  --bg-default: #f3f2f7;
-
-  --bg-loader: #171717;
-  --bg-loader-text: #f3f2f7;
-
-  --v-spacing: 10vh;
-  --h-gutter: 6.6vw;
-
-  --easing: cubic-bezier(0.5, 0.7, 0.4, 1);
-}
-
 * {
   box-sizing: border-box;
   border-collapse: inherit;
@@ -24,26 +9,12 @@
 
 body {
   font: 16px/1.7 "Graphit", sans-serif;
-  color: var(--text-color);
-  background: var(--bg-default);
+  color: #171717;
+  background: #f3f2f7;
 
   &.a-mobile {
     overflow: unset;
   }
-}
-
-/* hide page content by default */
-.is-loading #main,
-.is-loading .hero,
-.is-loading .fill-background {
-  display: none;
-}
-.is-loading {
-  background-color: var(--bcg-loaderblue);
-}
-.is-transitioning {
-  pointer-events: none;
-  cursor: progress;
 }
 
 :not(body) {
@@ -64,17 +35,12 @@ ul {
   padding: 0;
 }
 
-li {
-  display: inline-block;
-}
-
 article,
 section {
   will-change: transform;
 }
 
-.heading-xl,
-.s-footer .footer-container:after {
+.heading-xl {
   font-size: 14.583vw;
   font-weight: 400;
   line-height: 13.194vw;
@@ -104,9 +70,7 @@ section {
   padding-left: 8.65vw;
 }
 
-.s-footer .s-project .project-head .footer-container:after,
-.s-project .project-head .heading-xl,
-.s-project .project-head .s-footer .footer-container:after {
+.s-project .project-head .heading-xl {
   flex-basis: 100%;
   position: relative;
 }
@@ -124,8 +88,7 @@ img {
 }
 
 @media only screen and (max-width: 768px) {
-  .heading-xl,
-  .s-footer .footer-container:after {
+  .heading-xl {
     font-size: 15vw;
     line-height: 14.583vw;
     letter-spacing: -0.3vw;
@@ -140,10 +103,9 @@ img {
     line-height: 5vw;
     margin-bottom: 8.33vw;
   }
-  .s-footer .s-project .project-head .footer-container:after,
-  .s-project .project-head .heading-xl,
-  .s-project .project-head .s-footer .footer-container:after {
+  .s-project .project-head .heading-xl, {
     order: 3;
+    margin-top: 8.33vw;
   }
   .button-r {
     font-size: 3.5vw;
