Fixed scrolling bug

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -57,6 +57,13 @@ section {
   line-height: 13.194vw;
 }
 
+.heading-m {
+  font-size: 1.458vw;
+  font-weight: 900;
+  line-height: 2.083vw;
+  margin-bottom: 4.167vw;
+}
+
 .paragraph-m {
   font-size: 1.458vw;
   font-weight: 400;
